--- a/lang/english.lng
+++ b/lang/english.lng
@@ -7,14 +7,11 @@ STR_GRF_URL:https://github.com/Yozora3/xUSSRplus
 STR_ATTACH_ERROR:Can only attach MU Cars
 STR_FEW_CARS_3_ERROR:Consist requires at least 3 cars
 
+GRF_USSR:{WHITE}Please use {YELLOW}xUSSR Rails Set {WHITE}for the best game experience.
+
 # *Tech stuff (do not include these in translation files)
 STR_CONCAT_7:{STRING}{STRING}{STRING}{STRING}{STRING}{STRING}{STRING}
 
-# *Livery stuff
-# often used
-LV_RANDOM: Auto-Timed/Randomized Livery
-LV_DEFAULT: Default Livery
-LV_ORIGINAL: Original Livery
 # *Desc stuff
 # gauge
 STR_BROADGAUGE:{BLACK}Gauge:{GOLD} Broad (1,520mm){}
@@ -41,18 +38,23 @@ STR_OPERATOR:{BLACK}Operator: {STRING}
 STR_CPPK:{GREEN}Central Suburban Passenger Company
 STR_MTPPK:{LTBLUE}Moscow-Tver Suburban Passenger Company
 
+# *Livery names
+LV_RANDOM: Auto-Timed/Randomized Livery
+LV_DEFAULT: Default Livery
+LV_ORIGINAL: Original Livery
+LV_MCD: With "MCD" Letters {TINYFONT}(2019)
 
 # mu_cars
-STR_MUCAR:xUSSR+ MU
-STR_MUCAR_DESC:{BLUE}Used to represent {GREEN}motor and trailer cars{BLUE} within a {GREEN}train {BLUE}formation.
+STR_MUCAR:EG2Tv "Ivolga" Car
+STR_MUCAR_DESC:{BLUE}Used to represent {GREEN}motor and trailer cars{BLUE} within an {GREEN}Ivolga {BLUE}formation.
 
 
-STR_ivolga0_NAME: EG2Tv "Ivolga 0.0"
-STR_ivolga1_NAME: EG2Tv "Ivolga 1.0"
-STR_ivolga2_NAME: EG2Tv "Ivolga 2.0"
-STR_ivolga3_NAME: EGE2Tv "Ivolga 3.0"
-STR_ivolga4_NAME: EGE2Tv "Ivolga 4.0"
-STR_ivolga0_DESC: 5
-STR_ivolga1_DESC: 6,11
-STR_ivolga2_DESC: 7,11
-STR_ivolga34_DESC: 11
+STR_ivolga0_NAME:EG2Tv "Ivolga 0.0"
+STR_ivolga1_NAME:EG2Tv "Ivolga 1.0"
+STR_ivolga2_NAME:EG2Tv "Ivolga 2.0"
+STR_ivolga3_NAME:EGE2Tv "Ivolga 3.0"
+STR_ivolga4_NAME:EGE2Tv "Ivolga 4.0"
+STR_ivolga0_DESC:5
+STR_ivolga1_DESC:6,11
+STR_ivolga2_DESC:7,11
+STR_ivolga34_DESC:11
