--- a/lang/english.lng
+++ b/lang/english.lng
@@ -1,7 +1,22 @@
 ##grflangid 0x00
 STR_NAME:xUSSR+ Ivolga Addon
-STR_DESC:{RED}xUSSR{GOLD}+{RED}Ivolga Addon{BLACK} introduces modern Russian train EG2TV "Ivolga".{}Sister set to {RED}xUSSR{BLACK}{}{}{TINYFONT}{GREEN}Drawn by{LTBLUE} Yozora{GREEN}{}Coded by{LTBLUE} Yozora{}{}{SILVER}GPLv2{}2024
+STR_DESC:{RED}xUSSR{GOLD}+{RED}Ivolga Addon{BLACK} introduces modern Russian train EG2TV "Ivolga".{}Addon to {RED}xUSSR{BLACK}{}{}{TINYFONT}{GREEN}Drawn by{LTBLUE} Yozora{GREEN}{}Coded by{LTBLUE} Yozora{}{}{SILVER}GPLv2{}2024
 STR_GRF_URL:https://github.com/Yozora3/xUSSRplus
+
+# *Param stuff
+# Costs
+STR_PARAM_NAME_BASECOSTMODBUY:Purchase costs
+STR_PARAM_DESC_BASECOSTMODBUY:Define the purchase costs of vehicle
+
+STR_PARAM_RUN_NAME:Running costs
+STR_PARAM_RUN_DESC:Define the running costs of vehicles
+
+STR_PARAM_VLOW:Very Low
+STR_PARAM_LOW:Low
+STR_PARAM_NORMAL:Normal
+STR_PARAM_HIGH:High
+STR_PARAM_VHIGH:Very High
+
 
 # *Errors
 STR_ATTACH_ERROR:Can only attach MU Cars
